cluster/manifests/loganomaly/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loganomaly
  labels:
    name: loganomaly
    pod-security.kubernetes.io/enforce: restricted
    bindings.knative.dev/include: "true"
