cluster/manifests/loganomaly/overlays/dev/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: loganomaly
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: loganomaly
      app.kubernetes.io/component: ""
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
        - default/kubernetes.default.svc.cluster.local
        - knative-eventing/eventing-kafka-bootstrap.knative-eventing.svc.cluster.local
